# scrape-sort_races-toteboards

./: .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURAL_MANDATE.md  ARCHITECTURAL_MANDATE_V7.0.md  ARCHITECTURAL_MANDATE_V7.1.md  ARCHITECTURAL_MANDATE_V7.2.md  ARCHITECTURAL_MANDATE_V7.md  ARCHITECTURAL_MANDATE_V8.0.md  ARCHITECTURAL_MANDATE_V8.1.md  ARCHITECTURAL_PARABLES.md  ARCHIVE_PROJECT.py  BUILD_INSTALLER.bat  BUILD_RELEASE.ps1  CREATE_SHORTCUTS.bat  FORTUNA_ALL.JSON  FORTUNA_ALL_PART1.JSON  FORTUNA_ALL_PART2.JSON  FORTUNA_ALL_PART3.JSON  FORTUNA_ALL_PART4.JSON  FORTUNA_ALL_PART5.JSON  GEMINI_ONBOARDING.md  HISTORY.MD  HISTORY.md  INSTALL_FORTUNA.bat  JSON_BACKUP_MANIFEST.md  LAUNCH_FORTUNA.bat  MANAGE_MANIFESTS.py  MANIFEST.md  MANIFEST2.md  MANIFEST3.md  MANIFEST_BACKEND.json  MANIFEST_FRONTEND.json  MANIFEST_ROOT.json  MANIFEST_SCRIPTS.json  PREV_MANAGE_MANIFESTS.py  PREV_debug_hr_report.py  PREV_fix_common_issues.bat  PREV_health_check.bat  (+106 more)
PREV_checkmate_web/: main.py  requirements.txt
PREV_checkmate_web/static/: app.js  index.html
PREV_declarative_adapters/: equibase_v2.json
PREV_jules-scratch/verification/: verify_simple_mode.py
PREV_shared_database/: web_schema.sql
PREV_src/checkmate_v7/: api.py  config.py  models.py  settings.py
PREV_src/paddock_parser/: backtester.py  models.py  pipeline.py  prediction_engine.py  run.py  sync_fetcher.py
ReviewableJSON/: .env.example.json  .env.json  .gitignore.json  ARCHITECTURAL_MANDATE.md.json  HISTORY.md.json  PROJECT_MANIFEST.md.json  README.md.json  ROADMAP_APPENDICES.md.json  STATUS.md.json  WISDOM.md.json  __init__.py.json  __version__.py.json  api.py.json  attheraces_adapter.py.json  backtester.py.json  base.py.json  betfair_data_scientist_adapter.py.json  browser.py.json  chart_scraper.py.json  checkmate_engine.py.json  checkmate_monitor.html.json  command_deck.py.json  config.py.json  convert_to_json.py.json  create_fortuna_json.py.json  dashboard.py.json  debug_hr_report.py.json  download_timeform.py.json  equibase.py.json  equibase_adapter.py.json  fanduel_graphql_adapter.py.json  for_gpt5_review.json  fortuna_watchman.py.json  greyhound_recorder.py.json  headless_monitor.py.json  honeypot.py.json  http_client.py.json  hunt.py.json  launch_and_hunt.py.json  launch_dashboard.py.json  (+53 more)
ReviewableJSON/ReviewableJSON/: attheraces_adapter.py.json.json  betfair_data_scientist_adapter.py.json.json  equibase.py.json.json  equibase_adapter.py.json.json  fanduel_graphql_adapter.py.json.json  greyhound_recorder.py.json.json  racingandsports_adapter.py.json.json  racingpost_adapter.py.json.json  skysports_adapter.py.json.json  timeform_adapter.py.json.json
ReviewableJSON/attic/: dashboard.py.json  portable_demo_v2.py.json
ReviewableJSON/checkmate_web/: engine.py.json  main.py.json
ReviewableJSON/electron/: main.js.json  package.json.json  preload.js.json
ReviewableJSON/pg_schemas/: historical_races.sql.json  quarantine_races.sql.json
ReviewableJSON/python_service/: __init__.py.json  analyzer.py.json  api.py.json  cache_manager.py.json  checkmate_service.py.json  config.py.json  engine.py.json  etl.py.json  health.py.json  logging_config.py.json  models.py.json  models_v3.py.json  requirements.txt.json  security.py.json  windows_service_wrapper.py.json
ReviewableJSON/tests/: __init__.py.json  test_analyzer.py.json  test_api.py.json  test_checkmate_v7.py.json  test_engine.py.json  test_fetcher.py.json  test_forager_client.py.json  test_log_analyzer.py.json  test_scorer.py.json
assets/sounds/: .gitkeep
attic/: ARCHITECTURAL_MANDATE_V7.2.md  build_python_service.py  checkmate_engine.py  checkmate_monitor_v1.html  checkmate_service_v2.py  checkmate_service_v3.py  config_wizard_gui_v1.py  create_fortuna_json.py  launcher.py  portable_demo_v2.py  the_one_script.py  tipsheet_generator.py
attic/legacy_tests_pre_triage/: test_backtester.py  test_log_analyzer.py  test_python_service.py
attic/rust_engine/: .gitignore
checkmate_web/: engine.py  main.py
desktop_app/: App.xaml  App.xaml.cs  CheckmateDeck.csproj  MainWindow.xaml  app_config.json
docs/: AGENTS.md  ROADMAP.md
electron/: install-dependencies.js  installer.nsh  main.js  package.json  preload.js
golden_script/: checkmate_python.py
installer/: BUILD_INSTALLER.bat  fortuna_faucet_installer.wxs
paddock-parser-ng/: .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  ruff.toml  run.py
pg_schemas/: historical_races.sql  quarantine_races.sql  quarantined_races.sql
python_service/: __init__.py  adapter_anthology.py  analyzer.py  api.py  cache_manager.py  checkmate_service.py  config.py  credentials_manager.py  data_models.py  engine.py  etl.py  health.py  logging_config.py  main.py  minimal_service.py  models.py  models_v3.py  orchestrator.py  requirements.txt  security.py  service.py  setup_wizard_gui.py  windows_service_wrapper.py
r_scripts/: predictive_model.R
rust_engine/: Cargo.toml
rust_engine/src/: lib.rs  main.rs
rust_engine/tests/: integration_tests.rs
scripts/: create_shortcuts.py  generate_manifests.py
shared_database/: schema.sql  web_schema.sql
tests/: conftest.py  test_analyzer.py  test_api.py  test_api_dashboard.py  test_api_funnel.py  test_api_integration.py  test_api_races.py  test_backtester.py  test_checkmate_logic.py  test_checkmate_v7.py  test_dashboard.py  test_engine.py  test_fetcher.py  test_forager_client.py  test_legacy_scenarios.py  test_merger.py  test_models.py  test_pipeline.py  test_scorer.py  test_tiered_dashboard.py
tools/: rpb2b_query_parameter_hunter.py
vba_source/: Module_Charts.bas  Module_DB.bas  Module_UI.bas
(+483 files in other folders)
