[package]
name = "checkmate_engine"
version = "1.0.0"
edition = "2021"

# NEW: Define the binary target
[[bin]]
name = "checkmate_engine"
path = "src/main.rs"

# Define the library target
[lib]
name = "checkmate_engine_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"