[package]
name = "checkmate_engine"
version = "1.0.0"
edition = "2021"

# NEW: Define the binary target
[[bin]]
name = "checkmate_engine"
path = "src/main.rs"

# Define the library target
[lib]
name = "checkmate_engine_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
anyhow = "1.0"          # For cleaner error handling
num_cpus = "1.16"       # For dynamic thread pool sizing
tracing = "0.1"         # For structured, level-based logging

[dev-dependencies]
criterion = "0.5"       # The standard for benchmarking
pprof = { version = "0.12", features = ["flamegraph"] } # For CPU profiling

# Add this section to enable formal benchmarking
[[bench]]
name = "analysis_benchmark"
harness = false

[profile.release]
lto = true              # Enable Link-Time Optimization
codegen-units = 1       # Reduce parallelism for better optimization
panic = "abort"         # Abort on panic for smaller binary size
opt-level = 3           # Maximum optimization level
strip = true            # Strip symbols from the binary